# swagger.yaml
@@ -160,6 +160,16 @@ paths:
           schema:
             type: string
           example: t
+        - name: author
+          in: query
+          schema:
+            type: string
+          example: t
+        - name: numericFilters
+          in: query
+          schema:
+            type: string
+          example: price>50,averageRating>0
       responses:
         "200":
           description: Successful response
@@ -225,13 +235,12 @@ paths:
           description: The ID of the student
           schema:
             type: string
-            example: 123          
+            example: 123
       responses:
         "200":
           description: Successful response
           content:
             application/json: {}
-  /api/v1/products/{id}:
     delete:
       tags:
         - book
@@ -249,7 +258,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /api/v1/products/uploadImage:
+  /api/v1/books/uploadImage:
     post:
       tags:
         - book
@@ -268,7 +277,7 @@ paths:
           description: Successful response
           content:
             application/json: {}
-  /api/v1/products/{id}/reviews:
+  /api/v1/books/{id}/reviews:
     get:
       tags:
         - book
@@ -371,7 +380,7 @@ paths:
           description: The ID of the student
           schema:
             type: string
-            example: 123          
+            example: 123
       responses:
         "200":
           description: Successful response
